--- a/src/static/index.html
+++ b/src/static/index.html
@@ -28,7 +28,7 @@
     <script src="js/react.production.min.js"></script>
     <script src="js/react-dom.production.min.js"></script>
     <script src="js/react-bootstrap.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js" integrity="sha512-8M1WWEzuftS49rfh63fHz354qx+Pzvp3kcQVVTOxIdFSzjYC3I3vk5zgN0guAook97MQIZTfEdl9pUQTov9V6A==" crossorigin="anonymous"></script>
     <script type="text/babel" src="js/app.js"></script>
   </body>
 </html>
